# rebase-agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  INSTALL.md  LICENSE  README.md  __init__.py  docker-compose.yml  manual_test_guide.sh  pyproject.toml  quick_test.sh  requirements.txt
app/: config.py  dependencies.py  main.py
app/api/v1/: analysis.py  chat.py  projects.py  transformations.py
core/: __init__.py  context_manager.py  llm_client.py  prompt_engine.py  question_engine.py  transformation_engine.py
core/conversation/: __init__.py  chat_engine.py  conversation_flow.py  message_processor.py  response_generator.py  session_manager.py
core/models/: __init__.py  chat.py  discovery.py
core/prompts/: __init__.py  discovery_prompts.py  intent_prompts.py
core/services/: __init__.py  data_extraction_service.py  discovery_service.py  intent_service.py
core/utils/: __init__.py  formatters.py
domains/: __init__.py  base_domain.py  domain_registry.py
domains/framework_migration/: __init__.py
prompts/: business_discovery.jinja2  executive_summary.jinja2  roi_calculation.jinja2
prompts/analysis/: extract_business_insights.jinja2
prompts/conversation/: analyze_user_message.jinja2  initial_response.jinja2
prompts/question_generation/: area_specific_question.jinja2
tests/: test_api.py  test_basic.py  test_chat.py
